[package]
name = "a4tech-control"
version = "0.1.0"
authors = ["Anton Palgunov <toxblh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
glib = "0.10.2"
gio = "0.9.1"
rusb = "0.6.3"
byteorder = "1.3.4"
